[tool.poetry]
name = "BalancerV2cad"
version = "0.1.4"
description = "A preconfigured Python package, using python poetry"
authors = ["Nico Rodriguez, Thomas Liu, Marcin Jaczynski"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
drive = "BalancerV2cad.main:run"
tests = "scripts.project_helper:run_tests"
stubs = "scripts.project_helper:stub_gen"
analyze = "scripts.project_helper:run_analyzer"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
